--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,7 @@
 .container {
-  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -12,38 +10,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
@@ -52,17 +19,19 @@
   font-size: 4rem;
 }
 
-.title,
-.description {
+.title {
   text-align: center;
 }
 
 .description {
+  margin-top: 5rem;
+  width: 100%;
   line-height: 1.5;
   font-size: 1.5rem;
 }
 
-.code {
+.code,
+.code-block {
   background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
@@ -71,52 +40,38 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+.code-block {
+  display: block;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
+.form {
   text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.form-row {
+  margin-bottom: 1rem;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
+.label {
+  display: block;
+  margin-bottom: 0.1rem;
+}
+
+.input {
+  padding: 0.25rem 0.5rem;
+  width: 100%;
+  line-height: 1.5;
   font-size: 1.5rem;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
+.button {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background: none;
+  border: 1px solid black;
   line-height: 1.5;
+  font-size: 1.5rem;
 }
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.button:hover, .button:focus {
+  background: #ededed;
 }
